--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/main.js",
   "type": "module",
   "scripts": {
+    "db": "node --env-file=.env --watch-path=src src/DB/insert.js",
     "dev": "node --env-file=.env --watch-path=src src/main.js",
     "deploy-commands": "node --env-file=.env scripts/deploy-commands.js"
   },
@@ -12,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.16.3"
+    "discord.js": "^14.16.3",
+    "mongodb": "^6.11.0"
   },
   "devDependencies": {
     "tsx": "^4.19.2"
