--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.17.3"
+    "@discordjs/voice": "^0.18.0",
+    "discord.js": "^14.17.3",
+    "ffmpeg-static": "^5.2.0",
+    "libsodium-wrappers": "^0.7.15"
   },
   "devDependencies": {
     "tsx": "^4.19.2"
